<resources>
    <string name="app_name">Proxidize Android Legacy</string>
    <string name="_4g_proxy_solutions">Mobile Proxy Solutions</string>

    <!-- Strings related to login -->
    <string name="app_lb">Proxidize</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <array name="wlan_type">
        <item>TCP</item>
        <item>UDP</item>
        <item>HTTP</item>
        <item>HTTPS</item>
    </array>
    <string name="title_activity_navigtion_menu">NavigtionMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Proxidize Android Legacy</string>
    <string name="nav_header_subtitle">Mobile Proxy Solutions</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Change Server</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="proxy"><b>IP</b> : %1$s\n<b>Port</b> : %2$d\n<b>Username</b> : %3$s\n<b>Password</b> : %4$s</string>
    <string name="connect">Connect</string>
    <string name="copy_proxy_to_clipboard">Copy Proxy To Clipboard</string>
    <string name="your_proxy_connection_details">Your Proxy Connection Details:</string>
    <string name="exit">Exit</string>
    <string name="learn_about_mobile_proxies_on_proxidize_com">Learn about mobile proxies on proxidize.com</string>
    <string name="connected">Connected</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="custom_server">CHANGE SERVER</string>
    <string name="host">Host</string>
    <string name="binding_port">Binding Port</string>
    <string name="token">Token</string>
    <string name="read_docs">Read docs <a href="https://proxidize.com/android">Here</a></string>
    <string name="copy">Copy</string>
    <string name="http_proxy">HTTP(S) Proxy</string>
    <string name="ip_change_link_api">IP Change Link/API</string>
    <string name="socks_proxy">SOCKS5 Proxy</string>
    <string name="rotate">CHANGE IP</string>
    <string name="custom_rotate">AUTO CHANGE IP</string>
    <string name="time_interval">Time interval in min(s)</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="experimental">Experimental</string>
    <string name="reset_server">Reset Server</string>
</resources>