<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8D1">
    <TextView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimaryDark"
        app:title=""
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/connect"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:elevation="8dp"
        android:padding="16dp"
        android:stateListAnimator="@null"
        android:text="@string/connect"
        android:textColor="#241708"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:cornerRadius="16dp"
        app:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/copyButton"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:elevation="8dp"
        android:padding="16dp"
        android:text="@string/copy_proxy_to_clipboard"
        android:textColor="#241708"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:cornerRadius="16dp"
        app:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connect" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/customServer"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:elevation="8dp"
        android:padding="16dp"
        android:text="@string/custom_server"
        android:textColor="#241708"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:cornerRadius="16dp"
        app:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/copyButton" />


    <TextView
        android:id="@+id/connectionLabelTextView"
        android:layout_width="300dp"
        android:layout_height="31dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif"
        android:text="@string/your_proxy_connection_details"
        android:textColor="#241708"
        android:textIsSelectable="false"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customServer" />

    <TextView
        android:id="@+id/connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textAlignment="center"
        android:textColor="#0202C3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectionLabelTextView" />

    <TextView
        android:id="@+id/connectionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/wbsiteLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connection"
        app:layout_constraintVertical_bias="0.20"
        tools:text="@string/proxy" />


    <TextView
        android:id="@+id/wbsiteLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:autoLink="web"
        android:text="@string/learn_about_mobile_proxies_on_proxidize_com"
        android:textAlignment="center"
        android:textColor="#0202C3"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/stop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/stop"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="200dp"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:elevation="8dp"
        android:text="@string/exit"
        android:textColor="#241708"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:cornerRadius="16dp"
        app:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>